--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@ body{
 
 .container{
     width: 1224px;
-    background-color: black;
+    margin: 0 auto;
 }
-
+main {
+    background-color: aqua;
+}
 .content {
     text-align: center;
 }
