--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@ body{
     width: 1224px;
     margin: 0 auto;
 }
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 main {
     background-color: aqua;
 }
