--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,12 @@ main {
 .content {
     text-align: center;
 }
-
+main ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 ul{
     padding: 20px;
     text-align: center;
